# swagger_server/__init__.py
@@ -4,10 +4,4 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.error_response import ErrorResponse
-from swagger_server.models.inline_response200 import InlineResponse200
-from swagger_server.models.inline_response2001 import InlineResponse2001
-from swagger_server.models.inline_response400 import InlineResponse400
-from swagger_server.models.inline_response4001 import InlineResponse4001
-from swagger_server.models.send_bulk_body import SendBulkBody
-from swagger_server.models.send_individual_body import SendIndividualBody
-from swagger_server.models.send_response import SendResponse
+
