# swagger_server/models/inline_response2001.py
@@ -1,90 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class InlineResponse2001(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, status: str=None, send_ids: List[str]=None):  # noqa: E501
-        """InlineResponse2001 - a model defined in Swagger
-
-        :param status: The status of this InlineResponse2001.  # noqa: E501
-        :type status: str
-        :param send_ids: The send_ids of this InlineResponse2001.  # noqa: E501
-        :type send_ids: List[str]
-        """
-        self.swagger_types = {
-            'status': str,
-            'send_ids': List[str]
-        }
-
-        self.attribute_map = {
-            'status': 'status',
-            'send_ids': 'send_ids'
-        }
-        self._status = status
-        self._send_ids = send_ids
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse2001':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The inline_response_200_1 of this InlineResponse2001.  # noqa: E501
-        :rtype: InlineResponse2001
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def status(self) -> str:
-        """Gets the status of this InlineResponse2001.
-
-
-        :return: The status of this InlineResponse2001.
-        :rtype: str
-        """
-        return self._status
-
-    @status.setter
-    def status(self, status: str):
-        """Sets the status of this InlineResponse2001.
-
-
-        :param status: The status of this InlineResponse2001.
-        :type status: str
-        """
-
-        self._status = status
-
-    @property
-    def send_ids(self) -> List[str]:
-        """Gets the send_ids of this InlineResponse2001.
-
-        List of unique identifiers for the messages  # noqa: E501
-
-        :return: The send_ids of this InlineResponse2001.
-        :rtype: List[str]
-        """
-        return self._send_ids
-
-    @send_ids.setter
-    def send_ids(self, send_ids: List[str]):
-        """Sets the send_ids of this InlineResponse2001.
-
-        List of unique identifiers for the messages  # noqa: E501
-
-        :param send_ids: The send_ids of this InlineResponse2001.
-        :type send_ids: List[str]
-        """
-
-        self._send_ids = send_ids
